# Demo-Timetracker-uploader

./: README.md  README.rst  pyproject.toml
tests/: test_timetrack_demo.py
timetrack_demo/: app.py
