[tool.poetry]
name = "timetrack-demo"
version = "0.1.0"
description = ""
authors = ["Nate Vogel"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version="0.85.0", extras=['all']}
uvicorn = "*"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
